# test_mindbox_shapes

./: README.md  pyproject.toml
mixins/: squarable.py
shapes/: __init__.py  base.py
shapes/circle/: shape.py
shapes/triangle/: shape.py
src/shape_area/: __init__.py
src/shape_area/mixins/: squarable.py
src/shape_area/shapes/: __init__.py  base.py
src/shape_area/shapes/circle/: shape.py
src/shape_area/shapes/triangle/: shape.py
tests/: test_shape_creation.py  test_shape_validation.py  test_square_calc.py  test_triangle_is_right.py
